--- a/lessons/01-html-introduction/index.html
+++ b/lessons/01-html-introduction/index.html
@@ -5,6 +5,6 @@
     </head>
     <body>
         <h1>My Second Day At ComIT</h1>
-        <p>City, City, the best team in the world!</p>
+        <p>City, City, the best team in the world!!</p>
     </body>
 </html>
