--- a/lessons/01-html-introduction/index.html
+++ b/lessons/01-html-introduction/index.html
@@ -4,7 +4,7 @@
         <title>Exercise 01</title>
     </head>
     <body>
-        <h1>Hello, ComIT!!!</h1>
+        <h1>!!!Hello, ComIT!!!</h1>
         <p>This is a first Comit-React lesson</p>
 
     </body>
