--- a/lessons/01-html-introduction/index.html
+++ b/lessons/01-html-introduction/index.html
@@ -10,7 +10,7 @@
             Everything fine 
         </p>
         <p>
-            
+            Mauris interdum tempus turpis id congue. Vivamus at ex sit amet lorem eleifend rutrum. Mauris eget ligula eu purus egestas mollis id ut lectus. Phasellus vitae arcu eu felis pharetra rutrum nec sit amet purus. Quisque dapibus sapien eget tempor consequat. In hac habitasse platea dictumst. Maecenas sed libero imperdiet, consectetur enim a, tincidunt neque. Pellentesque dictum nec lorem sit amet bibendum. Aenean ornare quis nibh et pharetra. Pellentesque maximus ac tellus sit amet cursus. Nullam ut est at lectus sodales egestas. Proin sagittis dictum sagittis. Donec fringilla enim justo, ut semper nisl ultricies maximus. Aliquam erat volutpat.
         </p>
     </body>
 </html>
