--- a/lessons/01-html-introduction/Test.html
+++ b/lessons/01-html-introduction/Test.html
@@ -9,6 +9,6 @@
         <h1>A test!</h1>
 
         <p>Testing... 1, 2, 3!</p>
-        <p>A wonderful test!</p>
+        <p>A wonderful and awesome test!</p>
     </body>
 </html>
