--- a/lessons/01-html-introduction/index.html
+++ b/lessons/01-html-introduction/index.html
@@ -6,6 +6,8 @@
 
 <body>
     <h1>Hello, ComIT!</h1>
+    <h2>Hello World</h2>
+    <h3>Hi ComIT</h3>
 
     <p>This is my first paragraph.................!</p>
 
