--- a/lessons/01-html-introduction/index.html
+++ b/lessons/01-html-introduction/index.html
@@ -6,6 +6,7 @@
 
 <body>
     <h1>Hello, ComIT....!</h1>
+    <h6>Hello, ComIT....!</h6>
 
     <p>This is my first paragraph.................!</p>
 
