--- a/lessons/01-html-introduction/index.html
+++ b/lessons/01-html-introduction/index.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-    <h1>Hello, ComIT....!</h1>
+    <h1>Hello, ComIT!</h1>
 
     <p>This is my first paragraph.................!</p>
 
