--- a/lessons/01-html-introduction/index.html
+++ b/lessons/01-html-introduction/index.html
@@ -15,4 +15,13 @@
         <h2>SASKATOON</h2>
     </body>
 </html>
+<html>
+    <head>
+        <title>Exercise 01</title>
+    </head>
+    <body>
+        <h1>Hello,comIT Saskatoon!</h1>
+        <p>welcome all..Enjoy your joureny for IT</p>
+    </body>
+</html>
 
