--- a/lessons/02-html-blocks/index.html
+++ b/lessons/02-html-blocks/index.html
@@ -4,7 +4,7 @@
         
     </head>
     <body>
-        <h1>My Favourite Cats</h1>
+        <h1>My Favorite Cats</h1>
         <p>Below you will find photos of my <em>favourite</em> cats. You will notice that there are <strong><em>dogs here</em></strong>.
         </p>
         <img src="https://placekitten.com/300/287" alt="My First Favorite Kitten"/>
