--- a/lessons/01-html-introduction/index.html
+++ b/lessons/01-html-introduction/index.html
@@ -4,12 +4,15 @@
   </head>
   <body>
     <h1>Hello ComIT!</h1>
-    <p>Hello. Just adding paragraph</p>
+    <p>Hello. Just adding paragraph<sup>4</sup></p>
+    <p><strong>Notice me</strong><sub>3</sub></p>
+    <p><em>Emphasise</em></p>
     <p>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur eligendi,
       dolore commodi necessitatibus fugit aut, ad saepe velit neque quaerat
       dolorum! Incidunt voluptatem facilis asperiores aliquam optio deserunt ad
       atque?
     </p>
+    <img src="C:\Users\home\Desktop\pic.jpg" alt="Its me" />
   </body>
 </html>
