--- a/lessons/02-html-blocks/index.html
+++ b/lessons/02-html-blocks/index.html
@@ -2,7 +2,7 @@
     <head>
         
     <title> "Photos of cats</title>
-        <head>"My favourite cats"</head>
+    
     <body>
 
 <h1> "My favourite cats"</h1>
@@ -13,7 +13,7 @@
     <img src="http://placekitten.com/300/300" alt="My second favourite kitten" />
     <img src="http://placekitten.com/200/200" alt="My third favourite kitten" />
     <img src="http://placekitten.com/400/300" alt="My fourth favourite kitten" />
-    </body>body>
+    <img src="http://placekitten.com/300/300" alt="My fifth favourite kitten" />
     </body>
     </html>
 
