--- a/lessons/03-html-lists/Index.html
+++ b/lessons/03-html-lists/Index.html
@@ -25,20 +25,22 @@
     </ol>
 
     <ul>
-        <li>*Hogwarts Ghosts</li>
+        <li>*Hogwarts Ghosts
             <ol>
                 <li>The Bloody Baron</li>
                 <li>The Fat Friar</li>
                 <li>The Gray Lady</li>
                 <li>Nearly Headless Nick</li>
             </ol>
-        <li>*Hogwarts founders</li>
+        </li>
+        <li>*Hogwarts founders
             <ol>
                 <li>Godric Gryffindor</li>
                 <li>Helga Hufflepuff</li>
                 <li>Rowena Ravenclaw</li>
                 <li>Salazar Slytherin</li>
             </ol>
+        </li>
     </ul>
 
     <h2>Lists of Spells</h2>
@@ -58,8 +60,5 @@
         <dt>Locomotor</dt>
         <dd>The spell causes the named object to rise in the air and move around at the will of the caster.</dd>
     </dl>
-
-
-    <p></p>
 </body>
 </html>
