04-html-table completed 3rd commit

--- a/lessons/04-html-tables/index.html
+++ b/lessons/04-html-tables/index.html
@@ -7,7 +7,7 @@
     <title>Stanley Cup Champions</title>
 </head>
 <body>
-    <h1>Stanley Cup Champions</h1>
+    <h1>Stanley Cup Championss</h1>
     <h2>Every team that's won the Cup</h2>
     <img src="https://nhl.bamcontent.com/images/photos/287516894/1024x576/cut.jpg" alt="Stanley Cup Champions">
     <h3>Champions</h3>
