--- a/lessons/01-html-introduction/index.html
+++ b/lessons/01-html-introduction/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h1>Hello, ComIT!</h1>
-        <p>paragraph</p>
-        <p>paragraph</p>
+        <p>paragraph1</p>
+        <p>paragraph2</p>
     </body>
 </html>
