Update lesson 02-html-blocks

--- a/lessons/02-html-blocks/index.html
+++ b/lessons/02-html-blocks/index.html
@@ -21,6 +21,13 @@
        <h1>List of "inline" elements</h1>
             <abbr title="This is abbr tag ">Hello abbr</abbr>
             <p>The <acronym title="World Wide Web">WWW</acronym> is only a component of the Internet.</p>
+            <!-- Simple audio playback -->
+            <h4>Audio tag</h4>
+            <audio
+                src="https://upload.wikimedia.org/wikipedia/commons/f/f2/Median_test.ogg"
+                autoplay>
+                Your browser does not support the <code>audio</code> element.
+            </audio>
             <!--audio src=""></audio>
             <audio> (if it has visible controls)
             <b>
