--- a/lessons/03-html-lists/index.html
+++ b/lessons/03-html-lists/index.html
@@ -25,12 +25,56 @@
                 <li>Sybill Trelawney</li>                
         </ol>
 
-        <dl>
-                <dt>Firefox</dt>
+        <ul>
+            <li>Hogwarts ghosts                
+                <ol>
+                    <li>The Bloody Baron</li>
+                    <li>The Fat Friar</li>
+                    <li>The Grey Lady</li>
+                    <li>Nearly Headless Nick</li>                                        
+                </ol>
+            </li>
+
+            <li>Hogwarts founders               
+                <ol>
+                    <li>Godric Gryffindor</li>
+                    <li>Helga Hufflepuff</li>
+                    <li>Rowena Ravenclaw</li>
+                    <li>Salazar Slytherin</li>                                        
+                </ol>
+            </li>
+        </ul>
+        <h2>List of spells</h2>
+        
+            <dl>
+                <dt>Aberto</dt>
                 <dd>
-                  A free, open source, cross-platform, graphical web browser developed by the
-                  Mozilla Corporation and hundreds of volunteers.
+                    A spell presumably used to open objects such as doors or windows.
+                </dd>            
+                <dt>Accio</dt>
+                <dd>
+                    This charm summons an object to the caster, potentially over a significant distance.
+                </dd>            
+                <dt>Expecto Patronum</dt>
+                <dd>
+                    Evokes a partially-tangible positive energy force known as a Patronus
+                </dd>            
+                <dt>Sectumsempra</dt>
+                <dd>
+                    A dark spell that creates large, blood-oozing gashes on the subject as if said subject had been "slashed by a sword".
+                </dd>           
+                <dt>Immobulus</dt>
+                <dd>
+                    Renders living targets immobile.
+                </dd>          
+                <dt>Partis Temporus</dt>
+                <dd>
+                    Creates a temporary gap through protective magical barriers.
+                </dd>           
+                <dt>Locomotor</dt>
+                <dd>
+                    The spell causes the named object to rise in the air and move around at the will of the caster.
                 </dd>
-        </dl>
+            </dl>
     </body>
 </html>
