--- a/lessons/05-html-linking/index.html
+++ b/lessons/05-html-linking/index.html
@@ -1,17 +1,11 @@
 <html>
     <title>
         <body>
-                `html
-
-<a href="mailto:domain@example.com">Email me</a>
-
-<a href="tel:+13061234567">Call me</a>
-
-<a href="#">Go top top</a>
-
-<a href="#my-element">Go my element</a>
-<p id="my-element">Imagine i'm way down the page</p>
-        </body>
+                <about class="about.html"></about>
+                <contact class="contact.html"></contact>
+                <news class="news.html"></news>
+                
+            </body>
     </title>
      
 </html>
