--- a/lessons/06-html-layout/index.html
+++ b/lessons/06-html-layout/index.html
@@ -11,16 +11,22 @@
         </header>
         <body>
                 <div>
-                        <img src="example-1.png" />
-                        <img src="example-2.png" width="200px" />
+                        <img src="example-1.png" width="150px"/>
+                        <img src="example-2.png" width="100px" />
                       </div>
                       <div>
-                        <img src="example-3.jpg" />
-                        <img src="example-4.jpg" />
+                        <img src="example-3.jpg" width="150px" />
+                        <img src="example-4.jpg" width="150px" />
                       </div>
                       <div>
                         <img src="example-5.jpg" />
                         <img src="example-6.jpg" />
                       </div>
+
+                      <div class="warning">
+                        <img src="/leopard.jpg" width= "200px"/>
+                             alt="An intimidating leopard.">
+                        <p>Beware of the leopard</p>
+                    </div>
         </body>
 </html>
