--- a/lessons/09-css-style-attr/index.html
+++ b/lessons/09-css-style-attr/index.html
@@ -6,10 +6,16 @@
   </head>
   <body >
     <header style="text-align: center">Homepage</header>
-   <h1>HOME OF MODEST FASHION</h1>
-  <div>
-      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem, ex incidunt. Repellendus neque quis maxime ab ea repudiandae alias in, exercitationem facilis autem, quibusdam quod mollitia quaerat? Odit, beatae fugit?</p>
+   
+    <div style="text-align: right;">
+      <p style="font-style: italic;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem, ex incidunt. Repellendus neque quis maxime ab ea repudiandae alias in, exercitationem facilis autem, quibusdam quod mollitia quaerat? Odit, beatae fugit?</p>
  
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Distinctio possimus incidunt, recusandae corporis quae provident enim nulla aliquam ad fugiat illo ut voluptate corrupti aliquid vitae molestias quisquam animi iure.</p> 
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, dolor obcaecati. Accusantium voluptate repudiandae iure dolores! Facilis in, consequuntur voluptatibus ex quo, vero accusamus tempora quidem laudantium voluptas inventore facere.</p>  
-  </div>   
+      <p style="background-color: blue;color:rgb(255, 255, 255);">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Distinctio possimus incidunt, recusandae corporis quae provident enim nulla aliquam ad fugiat illo ut voluptate corrupti aliquid vitae molestias quisquam animi iure.</p> 
+      <p><span style="font-size:24px;">Lorem </span>ipsum dolor sit amet consectetur adipisicing elit. Excepturi, dolor obcaecati. Accusantium voluptate repudiandae iure dolores! Facilis in, consequuntur voluptatibus ex quo, vero accusamus tempora quidem laudantium voluptas inventore facere.</p>  
+    </div>   
+    <p style="background-color: #FFBD33;">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat expedita at sequi amet, reprehenderit accusantium non saepe distinctio animi nulla minus voluptates quia necessitatibus in fugiat! Dicta voluptate nam quos.</p>
+    <p style="text-transform: uppercase;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt, quas rem nesciunt voluptate eaque ut rerum vitae perferendis quis ducimus a amet facilis illum quos quibusdam, optio unde delectus laudantium.</p>
+    <p style="text-transform: capitalize;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio quae sapiente excepturi illum in commodi perspiciatis adipisci quo iure ratione accusantium at, fugit, quisquam sed, vel facilis voluptate perferendis sunt!</p>
+  
+  </body>  
+</html> 
