Completed lesson 09-css-style-attr,10-css-selector

--- a/lessons/09-css-style-attr/index.html
+++ b/lessons/09-css-style-attr/index.html
@@ -25,7 +25,7 @@
                 molestiae ut earum quod sapiente non amet provident. 
             </p>            
         </div>
-        
+        <div style="text-align:justify">
         <p style="background-color: sandybrown">
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Commodi itaque, ad
             quo eius tempora reiciendis suscipit porro nihil, voluptate facere, cum totam
@@ -41,5 +41,6 @@
             quo eius tempora reiciendis suscipit porro nihil, voluptate facere, cum totam
             molestiae ut earum quod sapiente non amet provident. 
         </p>
+    </div>
     </body>
 </html>
