--- a/lessons/05-html-linking/about.html
+++ b/lessons/05-html-linking/about.html
@@ -3,10 +3,15 @@
         <title>About </title>
     </head>
     <body>
-        <p> 
+        <h1>About</h1>
+        <p> <ul>
+            <li><a href="E:\Mital\ComIT\Coding\code\comit-react\lessons\05-html-linking/index.html">Home</a></li>
+            <li><a href="E:\Mital\ComIT\Coding\code\comit-react\lessons\05-html-linking/news.html">News</a></li>
+            <li><a href="E:\Mital\ComIT\Coding\code\comit-react\lessons\05-html-linking/about.html">About</a></li>
+            <li><a href="E:\Mital\ComIT\Coding\code\comit-react\lessons\05-html-linking/contact.html">Contact</a></li>
+        </ul>
 
-            <a href="file:///E:/Mital/ComIT/Coding/code/comit-react/lessons/05-html-linking/documents/resume.html">Resume</a>
-            <p><a href="index.html">Home</a></p>
+            <a href="file:///E:/Mital/ComIT/Coding/code/comit-react/lessons/05-html-linking/documents/resume.html"> View My Resume</a>
         </p>
     </body>
 </html>
