--- a/lessons/05-html-linking/contact.html
+++ b/lessons/05-html-linking/contact.html
@@ -1,20 +1,17 @@
 <html>
     <head>
-        <title>About </title>
+        <title>Contact</title>
     </head>
-    <body style="background-color: rosybrown;">
-        <p> 
-            <h1>Contact me<br>Mital patel</h1>
-            <p>You can reach Michael at:</p>
+    <body>
+        <h1>Contact</h1>
+        <p> <ul>
+            <li><a href="E:\Mital\ComIT\Coding\code\comit-react\lessons\05-html-linking/index.html">Home</a></li>
+            <li><a href="E:\Mital\ComIT\Coding\code\comit-react\lessons\05-html-linking/news.html">News</a></li>
+            <li><a href="E:\Mital\ComIT\Coding\code\comit-react\lessons\05-html-linking/about.html">About</a></li>
+            <li><a href="E:\Mital\ComIT\Coding\code\comit-react\lessons\05-html-linking/contact.html">Contact</a></li>
+        </ul>
 
-                <ul>
-                
-                     <li><a href="mailto:domain@example.com">Email Me</a></li>
-                     <li><a href="tel:+13061234567">Phone</a></li>
-                </ul>
-
-
-                        <p><a href="index.html">Home</a></p>
+            <a href="file:///E:/Mital/ComIT/Coding/code/comit-react/lessons/05-html-linking/documents/contact.html"> Contact me</a>
         </p>
     </body>
 </html>
