--- a/lessons/05-html-linking/news.html
+++ b/lessons/05-html-linking/news.html
@@ -1,16 +1,17 @@
-<html lang="en">
+<html>
     <head>
-        <title>News</title>
+        <title>Contact</title>
     </head>
     <body>
-        <h1>News</h1>
-        <p>
-            <a href="https://thestarphoenix.com/" target="_blank">https://thestarphoenix.com/</a>
+        <h1>Contact</h1>
+        <p> <ul>
+            <li><a href="E:\Mital\ComIT\Coding\code\comit-react\lessons\05-html-linking/index.html">Home</a></li>
+            <li><a href="E:\Mital\ComIT\Coding\code\comit-react\lessons\05-html-linking/news.html">News</a></li>
+            <li><a href="E:\Mital\ComIT\Coding\code\comit-react\lessons\05-html-linking/about.html">About</a></li>
+            <li><a href="E:\Mital\ComIT\Coding\code\comit-react\lessons\05-html-linking/contact.html">Contact</a></li>
+        </ul>
+
+            <a href="https://thestarphoenix.com/">Go to the thestarphoenix</a>
         </p>
-        <p><a href="index.html">Home</a></p>
     </body>
-
-
-
-
-</html> 
+</html>
