Corrections and code readability for lesson 10

--- a/lessons/10-css-selectors/index.html
+++ b/lessons/10-css-selectors/index.html
@@ -21,12 +21,18 @@
         .div-2 div div p#P3 {
             text-transform: capitalize
         }
+        header h1 {
+            text-align: center
+        }
+        header div {
+            text-align: left
+        }
         </style>
 </head>
 
 <header>
-    <h1 style="text-align: center">Home Page</h1>
-    <div style="text-align: left">
+    <h1 >Home Page</h1>
+    <div>
         <p class="div-p-one">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, impedit harum magnam nisi aliquid voluptatum sequi laborum eveniet voluptates commodi id eligendi fuga deleniti soluta dolorem, et facilis eaque adipisci?
         </p>
@@ -37,7 +43,7 @@
            <span class="div-p-three">Lorem</span>, ipsum dolor sit amet consectetur adipisicing elit. Vel, a ex sapiente sunt maiores in harum exercitationem, voluptate hic nihil autem perspiciatis officiis fugiat minus sint iure eligendi molestias nisi?
         </p>
     </div>
-    <div class="Div-2">
+    <div class="div-2">
         <p id="P1">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, impedit harum magnam nisi aliquid voluptatum sequi laborum eveniet voluptates commodi id eligendi fuga deleniti soluta dolorem, et facilis eaque adipisci?
         </p>
