--- a/lessons/04-html-tables/index.html
+++ b/lessons/04-html-tables/index.html
@@ -7,7 +7,7 @@
         <h2>Every team that's won the Cup</h2>
         <img src="https://nhl.bamcontent.com/images/photos/287516894/1024x576/cut.jpg" alt="My fist pic of bamcontent" />
         <h3>Champions</h3>
-    </body><table>
+    <table>
   <thead>
     <tr>
       <th>Year</th>
@@ -35,5 +35,6 @@
         <tr><td>2001</td><td>Colorado Avalanche</td><td>Bob Hartley</td></tr>
         <tr><td>2000</td><td>New Jersey Devils</td><td>Larry Robinson</td></tr>
   </tbody>
-</table>
+    </table>
+  </body>
 </html>
