--- a/lessons/05-html-linking/about.html
+++ b/lessons/05-html-linking/about.html
@@ -4,11 +4,36 @@
         <title>About Page</title>
     </head>
     <body>
-        <a href="/">Go Home</a>
+    <div>
+    <h1>About Page</h1>
+    </div>
+    <ul>
+    <li>
+    <div>
+    <a href="index.html">Home</a>
+    </div>
+      </li>
+        <li>
+    <div>
+
+    <a href="about.html">About</a>
+    </div>
+      </li>
+        <li>
+    <div>
+    <a href="contact.html">Contact</a>
+    </div>
+      </li>
+        <li>
+    <div>
+    <a href="news.html">News</a>
+    </div>
+      </li>
+    </ul>
+    <div>
+    <a href="documents/resume.html">View my resume</a>
+    </div>
         
-        <a href="contact.html">Contact Page</a>
-        <a href="documents/resume.html">Resume Page</a>
-        <a href="news.html">News Page</a>
 
     </body>
 </html>
