--- a/lessons/05-html-linking/contact.html
+++ b/lessons/05-html-linking/contact.html
@@ -4,11 +4,34 @@
         <title>Contact Page</title>
     </head>
     <body>
-        <a href="/">Go Home</a>
-        <a href="about.html">About Page</a>
-        
-        <a href="documents/resume.html">Resume Page</a>
-        <a href="news.html">News Page</a>
+    <div>
+    <h1>Contact Page</h1>
+    </div>
+    <ul>
+    <li>
+    <div>
+    <a href="index.html">Home</a>
+    </div>
+      </li>
+        <li>
+    <div>
+
+    <a href="about.html">About</a>
+    </div>
+      </li>
+        <li>
+    <div>
+    <a href="contact.html">Contact</a>
+    </div>
+      </li>
+        <li>
+    <div>
+    <a href="news.html">News</a>
+    </div>
+      </li>
+    </ul>
+    <a href="mailto:domain@example.com">Contact me</a>
+
 
     </body>
 </html>
