--- a/lessons/05-html-linking/documents/resume.html
+++ b/lessons/05-html-linking/documents/resume.html
@@ -4,10 +4,42 @@
         <title>Resume Page</title>
     </head>
     <body>
-        <a href="/">Go Home</a>
-        <a href="about.html">About Page</a>
-        <a href="contact.html">Contact Page</a>
-        <a href="news.html">News Page</a>
+    <div>
+    <h1>Resume Page</h1>
+     </div>
+    <ul>
+    <li>
+    <div>
+    <a href="../index.html">Home</a>
+    </div>
+      </li>
+        <li>
+    <div>
+
+    <a href="../about.html">About</a>
+    </div>
+      </li>
+        <li>
+    <div>
+    <a href="../contact.html">Contact</a>
+    </div>
+      </li>
+        <li>
+    <div>
+    <a href="../news.html">News</a>
+    </div>
+      </li>
+    </ul>   
+       <h2>Personal Info</h2>
+       <hr/>
+       <p><strong>Name: </strong> Ashni Parikh</p>
+       <p><strong>Address: </strong> 190 XYZ st,SK, Canada</p>
+       <p><strong>Phone: </strong> 306-743-1234</p>
+
+       <h2>Experience</h2>
+       <hr/>
+       <p><strong>Top Dog- </strong> May 2017-Present</p>
+       <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
 
     </body>
 </html>
