--- a/lessons/05-html-linking/news.html
+++ b/lessons/05-html-linking/news.html
@@ -4,11 +4,33 @@
         <title>News Page</title>
     </head>
     <body>
-        <a href="/">Go Home</a>
-        <a href="about.html">About Page</a>
-        <a href="contact.html">Contact Page</a>
-        <a href="documents/resume.html">Resume Page</a>
-        
+    <div>
+    <h1>News Page</h1>
+    </div>
+    <ul>
+    <li>
+    <div>
+    <a href="index.html">Home</a>
+    </div>
+      </li>
+        <li>
+    <div>
+
+    <a href="about.html">About</a>
+    </div>
+      </li>
+        <li>
+    <div>
+    <a href="contact.html">Contact</a>
+    </div>
+      </li>
+        <li>
+    <div>
+    <a href="news.html">News</a>
+    </div>
+      </li>
+    </ul>
+        <a href=" https://thestarphoenix.com/">Go to the StarPhoenix</a>
 
     </body>
 </html>
