@Oz completed lesson 06

--- a/lessons/06-html-layout/index.html
+++ b/lessons/06-html-layout/index.html
@@ -9,7 +9,7 @@
 </header>
 <main>
     <article>
-        <h2>News Article 1</h2>
+        <h2><a href="posts/post-1.html">News Article 1</a></h2>
         <p>
             <em>Posted on <span title = "2019-02-01 08:13:56">Feb 01, 2019</span></span></em>
         </p>
@@ -18,7 +18,7 @@
         </p>
     </article>
     <article>
-        <h2>News Article 2</h2>
+        <h2><a href="posts/post-2.html">News Article 2</a></h2>
         <p>
             <em>Posted on <span title = "2019-04-03 08:13:56">April 03, 2019</span></span></em>
         </p>
@@ -27,7 +27,7 @@
         </p>
     </article>
     <article>
-        <h2>News Article 3</h2>
+        <h2><a href="posts/post3.html">News Article 3</a></h2>
         <p>
             <em>Posted on <span title = "2019-08-03 08:13:56">Aug 03, 2019</span></span></em>
         </p>
