--- a/lessons/06-html-layout/index.html
+++ b/lessons/06-html-layout/index.html
@@ -5,7 +5,7 @@
     </header>
     <main>
         <article>
-            <a href="posts/post-1.html">Article 1</a>
+            <a href="posts/post-1.html">Important News Article 1</a>
             <p>
                 <em>Posted on <span title="2019-01-06 08:15:36">Jan 06, 2019</span></em>
             </p>
@@ -14,7 +14,7 @@
             </p>
         </article>
         <article>
-            <a href="posts/post-2.html">Article 2</a>
+            <a href="posts/post-2.html">Important News Article 2</a>
             <p>
                 <em>Posted on <span title="2019-03-21 08:15:36">March 21, 2019</span></em>
             </p>
@@ -23,7 +23,7 @@
             </p>
         </article>
         <article>
-            <a href="posts/post-3.html">Article 3</a>
+            <a href="posts/post-3.html">Important News Article 3</a>
             <p>
                 <em>Posted on <span title="2019-04-18 08:15:36">April 18, 2019</span></em>
             </p>
