correction to nested list

--- a/lessons/03-html-lists/index.html
+++ b/lessons/03-html-lists/index.html
@@ -31,20 +31,22 @@
             <li>Sybill Trelawney</li>
         </ol>
         <ul>
-        <li>Hogwarts ghosts</li> 
+        <li>Hogwarts ghosts
         <ol>
             <li>The Bloody Baron</li>
             <li>The Fat Friar</li>
             <li>The Grey Lady</li>
             <li>Nearly Headless Nick</li>
         </ol>
-        <li>Hogwarts founders</li> 
+        </li> 
+        <li>Hogwarts founders
         <ol>
             <li>Godric Gryffindor</li>
             <li>Helga Hufflepuff</li>
             <li>Rowena Ravenclaw</li>
             <li>Salazar Slytherin</li>
         </ol>
+       </li> 
         </ul>
 
         <h2>  List of spells</h2>
