changed tags in lesson 04

--- a/lessons/04-html-tables/index.html
+++ b/lessons/04-html-tables/index.html
@@ -1,128 +1,128 @@
 <!DOCTYPE html>
 <html>
     <head>
-            <meta name="viewport" content="width=device-width, inital-scale=1.0" charset="utf-8" />
+            <meta name="viewport" content="widtd=device-widtd, inital-scale=1.0" charset="utf-8" />
             <title>Stanley Cup Champions</title>
     </head>
 
     <body>
         <h1>Stanley Cup Champions</h1>
-        <h2>Every team that's won the cup </h2>
+        <h2>Every team tdat's won tde cup </h2>
         
-        <img src="https://nhl.bamcontent.com/images/photos/287516894/1024x576/cut.jpg" alt="image of the Stanley Cup" />
+        <img src="https://nhl.bamcontent.com/images/photos/287516894/1024x576/cut.jpg" alt="image of tde Stanley Cup" />
 
         <h3>Champions</h3>
 
         <table border="1">
-            <thead>
+            <tdead>
                 <tr>
                     <th>Year</th>
                     <th>Team</th>
                     <th>Coach</th>
                 </tr>
-            </thead>
+            </tdead>
 
             <tbody>
                 <tr>
-                    <th>2017</th>
-                    <th>Pittsburgh Penguins</th>
-                    <th>Mike Sullivan</th>
+                    <td>2017</td>
+                    <td>Pittsburgh Penguins</td>
+                    <td>Mike Sullivan</td>
                 </tr>
 
                 <tr>
-                    <th>2016</th>
-                    <th>Pittsburgh Penguins</th>
-                    <th>Mike Sullivan</th>
+                    <td>2016</td>
+                    <td>Pittsburgh Penguins</td>
+                    <td>Mike Sullivan</td>
                 </tr>
 
                 <tr>
-                    <th>2015</th>
-                    <th>Chicago Blackhawks</th>
-                    <th>Joel Quenneville</th>
+                    <td>2015</td>
+                    <td>Chicago Blackhawks</td>
+                    <td>Joel Quenneville</td>
                 </tr>
 
                 <tr>
-                    <th>2014</th>
-                    <th>Los Angeles Kings</th>
-                    <th>Darryl Sutter</th>
+                    <td>2014</td>
+                    <td>Los Angeles Kings</td>
+                    <td>Darryl Sutter</td>
                 </tr>
 
                 <tr>
-                    <th>2013</th>
-                    <th>Chicago Blackhawks</th>
-                    <th>Joel Quenneville</th>
+                    <td>2013</td>
+                    <td>Chicago Blackhawks</td>
+                    <td>Joel Quenneville</td>
                 </tr>
 
                 <tr>
-                    <th>2012</th>
-                    <th>Los Angeles Kings</th>
-                    <th>Darryl Sutter</th>
+                    <td>2012</td>
+                    <td>Los Angeles Kings</td>
+                    <td>Darryl Sutter</td>
                 </tr>
 
                 <tr>
-                    <th>2011</th>
-                    <th>Boston Bruins</th>
-                    <th>Claude Julien</th>
+                    <td>2011</td>
+                    <td>Boston Bruins</td>
+                    <td>Claude Julien</td>
                 </tr>
 
                 <tr>
-                    <th>2010</th>
-                    <th>Chicago Blackhawks</th>
-                    <th>Joel Quenneville</th>
+                    <td>2010</td>
+                    <td>Chicago Blackhawks</td>
+                    <td>Joel Quenneville</td>
                 </tr>
 
                 <tr>
-                    <th>2009</th>
-                    <th>Pittsburgh Penguins</th>
-                    <th>Dan Bylsma</th>
+                    <td>2009</td>
+                    <td>Pittsburgh Penguins</td>
+                    <td>Dan Bylsma</td>
                 </tr>
 
                 <tr>
-                    <th>2008</th>
-                    <th></th>
-                    <th></th>
+                    <td>2008</td>
+                    <td></td>
+                    <td></td>
                 </tr>
 
                 <tr>
-                    <th>2007</th>
-                    <th>Anaheim Ducks</th>
-                    <th>Randy Carlyle</th>
+                    <td>2007</td>
+                    <td>Anaheim Ducks</td>
+                    <td>Randy Carlyle</td>
                 </tr>
 
                 <tr>
-                    <th>2006</th>
-                    <th>Carolina Hurricanes</th>
-                    <th>Peter Laviolette</th>
+                    <td>2006</td>
+                    <td>Carolina Hurricanes</td>
+                    <td>Peter Laviolette</td>
                 </tr>
 
                 <tr>
-                    <th>2004</th>
-                    <th>Tampa Bay Lightning</th>
-                    <th>John Tortorella</th>
+                    <td>2004</td>
+                    <td>Tampa Bay Lightning</td>
+                    <td>John Tortorella</td>
                 </tr>
 
                 <tr>
-                    <th>2003</th>
-                    <th>New Jersey Devils</th>
-                    <th>Pat Burns</th>
+                    <td>2003</td>
+                    <td>New Jersey Devils</td>
+                    <td>Pat Burns</td>
                 </tr>
 
                 <tr>
-                    <th>2002</th>
-                    <th>Detroit Red Wings</th>
-                    <th>Scotty Bowman</th>
+                    <td>2002</td>
+                    <td>Detroit Red Wings</td>
+                    <td>Scotty Bowman</td>
                 </tr>
 
                 <tr>
-                    <th>2001</th>
-                    <th>Colorado Avalanche</th>
-                    <th>Bob Hartley</th>
+                    <td>2001</td>
+                    <td>Colorado Avalanche</td>
+                    <td>Bob Hartley</td>
                 </tr>
 
                 <tr>
-                    <th>2000</th>
-                    <th>New Jersey Devils</th>
-                    <th>Larry Robinson</th>
+                    <td>2000</td>
+                    <td>New Jersey Devils</td>
+                    <td>Larry Robinson</td>
                 </tr>
             </tbody>
         </table>
