--- a/lessons/11-css-specificity/index.html
+++ b/lessons/11-css-specificity/index.html
@@ -22,13 +22,22 @@
       nav a {
         color: green;
       }
+      #nav {
+        color: #00aced;
+      }
+      #center {
+        text-align: center;
+      }
+      #size {
+        size: 14px;
+      }
     </style>
   </head>
   <body>
-    <header>
+    <header id="center">
       <h1>Home Page</h1>
 
-      <nav>
+      <nav id="nav">
         <ul>
           <li>
             <a href="#">Home</a>
@@ -43,7 +52,7 @@
       </nav>
     </header>
 
-    <section>
+    <section id="size">
       <p>
         Lorem ipsum <a href="#">dolor sit amet</a>, consectetur adipisicing
         elit. Veniam corporis aspernatur, obcaecati, voluptate veritatis ad
