--- a/lessons/05-html-linking/news.html
+++ b/lessons/05-html-linking/news.html
@@ -1,8 +1,23 @@
 <html>
-    <title>
-        <body>
-            
-        <news class="html"></news>
-        </body>
-    </title>
+    <head>
+        <title>News</title>
+    </head>
+    <body>
+        <h1>News</h1>
+        <ul>
+            <li>
+                <a href="index.html">Home</a>
+            </li>
+            <li>
+                <a href="news.html">News</a>
+            </li>
+            <li>
+                <a href="about.html">About</a>
+            </li>
+            <li>
+                <a href="contact.html">Contact</a>
+            </li>
+        </ul> 
+        <a href="https://thestarphoenix.com/ ">Go to The StarPhoenix</a>       
+    </body>
 </html>
