--- a/lessons/11-css-specificity/index.html
+++ b/lessons/11-css-specificity/index.html
@@ -3,6 +3,8 @@
   <head>
     <title>Document</title>
     <style>
+    
+  
       a {
         color: red;
       }
@@ -21,6 +23,16 @@
       }
       nav a {
         color: green;
+      }
+      nav a{
+        color:blue;
+        text-align: center;
+      }
+      header{
+        text-align: center;
+      }
+      p{
+        font-size: 14px;
       }
     </style>
   </head>
