--- a/lessons/08-html-site/index.html
+++ b/lessons/08-html-site/index.html
@@ -1,9 +1,4 @@
 <html>
-    <style>
-        .class Home {
-            font-weight: 400
-        }
-    </style>
     <title>Home|Jaynen Sukhadia</title>
     <header>
         <h1>
@@ -13,7 +8,7 @@
     <nav>
         <a href="../index.html">Home</a>
         <a href="../about.html">About</a>
-        <a href="../contact.html">Contact</a>
+        <a href="contact.html">Contact</a>
     </nav>
     </header>
     <hr>
