Completes 09-css-style-attr

--- a/lessons/08-html-site/index.html
+++ b/lessons/08-html-site/index.html
@@ -6,8 +6,8 @@
         </h1>
         <h2>Jaynen's Portfolio</h2>
     <nav>
-        <a href="../index.html">Home</a>
-        <a href="../about.html">About</a>
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
         <a href="contact.html">Contact</a>
     </nav>
     </header>
