--- a/lessons/12-css-pseudo-selectors/index.html
+++ b/lessons/12-css-pseudo-selectors/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-
-<header>
+<html>
+<head>
   <title>Pseudo Classes</title>
-</header>
-<style>
+  <style>
   ul li:nth-child(2):hover {
     background: red;
     color: white;
@@ -20,6 +19,8 @@
   }
 </style>
 
+</head>
+
 <body>
   <h1>Funky List Items</h1>
   <ul>
@@ -35,3 +36,4 @@
     <li>Dates</li>
   </ul>
 </body>
+</html>
