Completed lesson 11-css-specificity

--- a/lessons/11-css-specificity/index.html
+++ b/lessons/11-css-specificity/index.html
@@ -22,13 +22,22 @@
       nav a {
         color: green;
       }
+      #header-id{
+        text-align:center;
+      }
+      #nav-id  a{
+        color: #00aced;
+      }
+      #session-id p{
+        font-size: 14px;
+      }
+
     </style>
   </head>
   <body>
-    <header>
-      <h1>Home Page</h1>
-
-      <nav>
+    <header id="header-id">
+      <h1 >Home Page</h1>
+      <nav id="nav-id">
         <ul>
           <li>
             <a href="#">Home</a>
@@ -43,7 +52,7 @@
       </nav>
     </header>
 
-    <section>
+    <section id="session-id">
       <p>
         Lorem ipsum <a href="#">dolor sit amet</a>, consectetur adipisicing
         elit. Veniam corporis aspernatur, obcaecati, voluptate veritatis ad
