Completed lesson 12-css-pseudo-classes

--- a/lessons/12-css-pseudo-classes/index.html
+++ b/lessons/12-css-pseudo-classes/index.html
@@ -13,7 +13,7 @@
         .item-list li:first-child{
             font-size:32px;
         }
-        .item-list li:nth-child(2n+1){
+        .item-list li:nth-child(3n){
             color:green;
         }
         .item-list li:last-child{
