--- a/lessons/11-css-specificity/index.html
+++ b/lessons/11-css-specificity/index.html
@@ -24,20 +24,19 @@
       nav a {
         color: green;
       }
-      nav a{
-        color:blue;
+      nav ul li a{
+        color: blue;
+       }
+      .name{
         text-align: center;
       }
-      header{
-        text-align: center;
-      }
-      p{
+      section p{
         font-size: 14px;
       }
     </style>
   </head>
   <body>
-    <header>
+    <header class="name">
       <h1>Home Page</h1>
 
       <nav>
