Few corrections in solution

--- a/lessons/05-html-linking/index.html
+++ b/lessons/05-html-linking/index.html
@@ -5,11 +5,11 @@
 </head>
 
 <body>
-  <h1>Index</h1>
+  <h1>Home</h1>
   <a href="index.html"><strong>Home</strong><br /></a>
   <a href="news.html"><strong>News</strong><br /></a>
   <a href="about.html"><strong>About</strong><br /></a>
-  <a href="Contact"><strong>Contact</strong><br /></a>
+  <a href="Contact.html"><strong>Contact</strong><br /></a>
   <p>
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut maiores
     mollitia doloribus tempora. Adipisci, cumque labore, dolorem voluptate
