--- a/lessons/05-html-linking/news.html
+++ b/lessons/05-html-linking/news.html
@@ -9,7 +9,7 @@
   <a href="index.html"><strong>Home</strong><br /></a>
   <a href="news.html"><strong>News</strong><br /></a>
   <a href="about.html"><strong>About</strong><br /></a>
-  <a href="Contact"><strong>Contact</strong><br /><br /></a>
+  <a href="Contact.html"><strong>Contact</strong><br /><br /></a>
   <a href="https://thestarphoenix.com"
     ><strong>Go to The StarPhoenix</strong></a
   >
