Completed CSS lessons

--- a/lessons/11-css-specificity/index.html
+++ b/lessons/11-css-specificity/index.html
@@ -22,6 +22,18 @@
       nav a {
         color: green;
       }
+
+      header h1 {
+        text-align: center;
+      }
+
+      nav ul li a {
+        color: #00aced; 
+      }
+
+      .text {
+        font-size: 14px;
+      }
     </style>
   </head>
   <body>
@@ -44,13 +56,13 @@
     </header>
 
     <section>
-      <p>
+      <p class="text">
         Lorem ipsum <a href="#">dolor sit amet</a>, consectetur adipisicing
         elit. Veniam corporis aspernatur, obcaecati, voluptate veritatis ad
         fugiat voluptatum repellat deserunt dolor magnam sapiente expedita
         harum! Dolorem animi sit fuga. Asperiores, delectus!
       </p>
-      <p>
+      <p class="text">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde ad vero
         dolorem <a href="#">dignissimos doloribus perferendis velit</a>.
         Consequuntur maxime eum aut odio, ipsa saepe sed, a facere nisi
